--- a/public/index.html
+++ b/public/index.html
@@ -7,34 +7,54 @@
 	<style>
 		body{
 			background-color: darkgray;
+			display: flex;
 		}
+
+		article{
+			color: white;
+			margin-left: 15px;
+		}
+
+		#score {
+			background-color: rgb(19, 10, 30);
+			border: solid 10px rgb(50, 50, 50);
+			width: 220px;
+			height: 570px;
+		}
+
 		#canvas{
 			background-color: rgb(19, 10, 30);
 			border: solid 10px rgb(50, 50, 50);
 			image-rendering: pixelated;
 			image-rendering: crisp-edges;
 			image-rendering: -moz-crisp-edges;
-			width: 900px;
+			width: 1000px;
 			height: 570px;
 		}
 	</style>
 </head>
 <body>
 
-	<canvas id="canvas" width="80" height="47"></canvas>
+	<canvas id="canvas" width="100" height="57"></canvas>
+	<div id="score">
+		<p style="text-align: center; color: white;">Ranking de jogadores</p>
+		<div id="lista-players">
+
+		</div>
+	</div>
 
 	<script type="module">
 		import renderScreen from './renderScreen.js'
 		import createGame from './game.js'
 		import onKeyboard from './onKeyboard.js'
 		import Server from '../server.js'
+		import Score from './Score.js'
 
 		let Player1Id
 		const canvas = document.getElementById('canvas')
 		const game = createGame(canvas)
 		const state = game.state
 		const keyboard = onKeyboard(document,game)
-		
 
 		game.newObserver((params)=>{
 			//console.table(params)
@@ -45,7 +65,7 @@
 			server.connect(game)
 			Player1Id = server.id
 		    keyboard.registerPlayer(Player1Id)
-			renderScreen(canvas,state,requestAnimationFrame,Player1Id)
+			renderScreen(document,state,requestAnimationFrame,Player1Id,Score)
 		}
 	</script>
 </body>
