--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
 			display: flex;
 		}
 
+		p{
+			padding-left: 10px;
+			margin-bottom: 4px;
+		}
+
+		#ranking{
+			display:flex;
+		}
+
 		article{
 			color: white;
 			margin-left: 15px;
@@ -20,6 +29,7 @@
 			border: solid 10px rgb(50, 50, 50);
 			width: 220px;
 			height: 570px;
+			font-size: small;
 		}
 
 		#canvas{
